feat: 영상 상호작용 저장 API 구현

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,4 +13,8 @@ cafeteria.find.not-exist=cafeteria {0} doesn't exist
 account.cafeteria.mapping.find.duplicated=account-cafeteria-mapping ({0}, {1}, {2}) already exists
 account.cafeteria.mapping.find.not-found=account-cafeteria-mapping ({0}, {1}, {2}) is not found
 
+video.find.not-exist=video {0} doesn't exist
+
+account.video.mapping.find.duplicated=account-cafeteria-mapping ({0}, {1}, {2}) already exists
+
 admin.config.no-token-duration=Token expiration time is not configured at server. Go ask administrator
