feat: 음식점 댓글 CRD API 구현

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -18,4 +18,7 @@ video.find.not-exist=video {0} doesn't exist
 account.video.mapping.find.duplicated=account-cafeteria-mapping ({0}, {1}, {2}) already exists
 account.video.mapping.find.not-found=account-video-mapping ({0}, {1}, {2}) is not found
 
+comment.find.not-exist=video {0} doesn't exist
+comment.find.not-authorized=user {0} can't access to comment {1}
+
 admin.config.no-token-duration=Token expiration time is not configured at server. Go ask administrator
